# django-editorjs-field

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Readme.md  pyproject.toml
.github/workflows/: python-publish.yml
django_editorjs_field/: __init__.py  field.py  formfield.py  plugin.py  tool.py  utils.py  widget.py
django_editorjs_field/static/django_editorjs_field/css/: typebase.css
django_editorjs_field/static/django_editorjs_field/js/: editor.js
django_editorjs_field/templates/django_editorjs_field/: widget.html
django_editorjs_field/templatetags/: editorjs.py
django_sample/: manage.py
django_sample/django_sample/: asgi.py  settings.py  urls.py  wsgi.py
django_sample/news/: models.py  urls.py  views.py
django_sample/news/migrations/: 0001_initial.py
django_sample/news/templates/: articles-list.html
example/: manage.py
example/example/: asgi.py  settings.py  wsgi.py
example/news/: models.py  views.py
example/news/templates/: articles-list.html
example/news/templates/tools/: h.html
src/django_editorjs_field/: __init__.py  field.py
tests/: test_tools.py
