[tool.poetry]
name = "django-editorjs-field"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_editorjs_field"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
devtools = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
