[tool.poetry]
name = "django-editorjs-field-next"
version = "0.1.1"
description = "An EditorJS Field with dependency injection of tools support for Django >4.*"
authors = ["Evgeniy Gribanov <evgeniy.therabbit@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eijawa/django-editorjs-field"
license = "MIT"
packages = [{include = "django_editorjs_field"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
devtools = "^0.10.0"
memray = "^1.5.0"
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
